Make EDS pages snapshot-first
